--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,8 +39,8 @@ html {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 body {
@@ -59,7 +59,7 @@ html {
   border: 4px solid #fff;
   top: 50%;
   -webkit-animation: loader 2s infinite ease;
-          animation: loader 2s infinite ease;
+  animation: loader 2s infinite ease;
 }
 
 .loader-inner {
@@ -68,60 +68,60 @@ html {
   width: 100%;
   background-color: #fff;
   -webkit-animation: loader-inner 2s infinite ease-in;
-          animation: loader-inner 2s infinite ease-in;
+  animation: loader-inner 2s infinite ease-in;
 }
 
 @-webkit-keyframes loader {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   25% {
     -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
+    transform: rotate(180deg);
   }
 
   50% {
     -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
+    transform: rotate(180deg);
   }
 
   75% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 @keyframes loader {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   25% {
     -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
+    transform: rotate(180deg);
   }
 
   50% {
     -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
+    transform: rotate(180deg);
   }
 
   75% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -501,7 +501,8 @@ header {
     url("../img/24.jpg");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
@@ -652,7 +653,7 @@ header {
   justify-content: center;
   height: 100%;
   width: 55%;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
 }
 
 .boxes-h2 {
@@ -660,7 +661,7 @@ header {
 }
 
 .boxes-p {
-  font-size: 1.6rem;
+  font-size: 1.7rem;
   margin-top: 2rem;
   padding: 0 2rem;
 }
@@ -669,6 +670,9 @@ header {
   display: inline-block;
   margin: 2rem auto;
   font-size: 1.8rem;
+  -webkit-box-shadow: 2px 2px 1px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 2px 2px 1px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 2px 1px -1px rgba(0, 0, 0, 0.75);
   letter-spacing: 1px;
   padding: 1rem;
   border: 1px solid rgb(114, 114, 114);
@@ -829,6 +833,7 @@ span {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  width: 100%;
 }
 
 .discover-food {
@@ -878,7 +883,8 @@ span {
     url("../img/54.jpg");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
@@ -940,7 +946,8 @@ span {
     url("../img/64.jpg");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
@@ -1183,87 +1190,12 @@ span {
   position: relative;
   background-attachment: fixed;
   height: 45vh;
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      from(rgba(10, 10, 10, 0.849)),
-      to(rgba(12, 12, 12, 0.849))
-    ),
-    url("../img/4.png");
-  background-image: -webkit-linear-gradient(
-      left,
-      rgba(10, 10, 10, 0.849),
-      rgba(12, 12, 12, 0.849)
-    ),
-    url("../img/4.png");
-  background-image: -o-linear-gradient(
-      left,
-      rgba(10, 10, 10, 0.849),
-      rgba(12, 12, 12, 0.849)
-    ),
-    url("../img/4.png");
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      from(rgba(10, 10, 10, 0.849)),
-      to(rgba(12, 12, 12, 0.849))
-    ),
-    url("../img/4.png");
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      from(rgba(10, 10, 10, 0.849)),
-      to(rgba(12, 12, 12, 0.849))
-    ),
-    url("../img/4.png");
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      from(rgba(10, 10, 10, 0.849)),
-      to(rgba(12, 12, 12, 0.849))
-    ),
-    url("../img/4.png");
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      from(rgba(10, 10, 10, 0.849)),
-      to(rgba(12, 12, 12, 0.849))
-    ),
-    url("../img/4.png");
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      from(rgba(10, 10, 10, 0.849)),
-      to(rgba(12, 12, 12, 0.849))
-    ),
-    url("../img/4.png");
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      from(rgba(10, 10, 10, 0.849)),
-      to(rgba(12, 12, 12, 0.849))
-    ),
-    url("../img/4.png");
-  background-image: -webkit-gradient(
-      linear,
-      left top, right top,
-      from(rgba(10, 10, 10, 0.849)),
-      to(rgba(12, 12, 12, 0.849))
-    ),
-    url("../img/4.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("../img/4.png");
+    url("../img/4.gif");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1277,7 +1209,7 @@ span {
   -webkit-box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
   background-color: #fff;
-  padding: 7rem;
+  padding: 5rem;
   text-align: center;
   margin-bottom: 6.5rem;
 }
@@ -1294,8 +1226,14 @@ span {
   margin-bottom: 5rem;
 }
 
+#welcome {
+  font-size: 2.5rem;
+  display: inline-block;
+  margin-bottom: 4rem;
+}
+
 .abs-img {
-  background-image: url("../img/4.png");
+  background-image: url("../img/24.jpg");
   height: 50vh;
   background-size: cover;
   background-position: center;
@@ -1477,7 +1415,8 @@ span {
     url("https://source.unsplash.com/qE1jxYXiwOA");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
@@ -1642,7 +1581,8 @@ span {
     url("../img/beer.gif");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
@@ -1702,7 +1642,8 @@ span {
     url("../img/coffee-2.gif");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
@@ -1764,7 +1705,8 @@ span {
     url("../img/tea-1.gif");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
@@ -1826,7 +1768,8 @@ span {
     url("../img/juice.gif");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
@@ -1888,7 +1831,8 @@ span {
     url("../img/wine.gif");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
@@ -1950,7 +1894,8 @@ span {
     url("../img/cocktail.gif");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
@@ -2010,7 +1955,8 @@ span {
     url("../img/alcohol.gif");
   background-image: -webkit-gradient(
       linear,
-      left top, right top,
+      left top,
+      right top,
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
@@ -2316,7 +2262,6 @@ footer {
 @media screen and (max-width: 500px) {
   .abs-container {
     padding: 3rem;
-    margin: -30px auto -30px auto;
   }
   .abs-h2 {
     font-size: 3rem;
